arreglo de test de usuario,juegos y pedidos